enable sponsor message
